# pySKRM

./: .gitignore  README.md  pyproject.toml
pySKRM/: __init__.py  ieee754.py  skrm.py
src/pyskrm/: __init__.py  ieee754.py  skrm.py
test/: conftest.py  test_ieee754.py  test_skrm.py  test_skrm_1d.py  test_skrm_mock.py
